app:fido2sample: enable back the codestripping & things

--- a/app/fido2sample/xcconfig/fido2sample.xcconfig
+++ b/app/fido2sample/xcconfig/fido2sample.xcconfig
@@ -39,12 +39,12 @@ IPHONEOS_DEPLOYMENT_TARGET = 15.0
 //           ├── fido2ui
 //           ├── fido2ui.xcodeproj
 
-//DEAD_CODE_STRIPPING = YES
-//DEPLOYMENT_POSTPROCESSING = YES
-//GCC_GENERATE_DEBUGGING_SYMBOLS = NO
-//STRIP_INSTALLED_PRODUCT = YES
-//STRIP_STYLE = all
-//COPY_PHASE_STRIP = YES
+DEAD_CODE_STRIPPING = YES
+DEPLOYMENT_POSTPROCESSING = YES
+GCC_GENERATE_DEBUGGING_SYMBOLS = NO
+STRIP_INSTALLED_PRODUCT = YES
+STRIP_STYLE = all
+COPY_PHASE_STRIP = YES
 
 OTHER_LDFLAGS = $(inherited) -framework fido2
 
